# gemini-workshop

./: 03_image_prompt_file_api.py  04_audio_prompt.py  06_video_prompt.py  07_chat_conversations.py  08_embeddings.py  09_function_calling.py  10_function_calling_advanced.py  11_langchain_gemini.py  12_langchaing_chat_conversation.py  13_embeddings_generate_vertexai.py  14_embeddings_search.py  15_embeddings_generate_multimodal_vertextai.py  16_embeddings_multimodal_search_.py  17_contents_embeddings_clustering.py  18_translation_agent_reflection.py  19_context_caching_gemini.py  1_first_steps.py  20_output_schema.py  21_output_schema_langchain.py  22_multimodal_search_gradio.py  23_generative_image.py  24_grounding.py  25_BigQuery_RAG.py  2_image_prompt.py  5_pdf_prompt.py  6_video_prompt.py  8_1_embeddings_langchain.py  README.md  pyproject.toml
