[tool.poetry]
name = "LLM Examples"
version = "1.0.0"
description = "LLM Examples"
authors = ["jggomez <juan.gomez01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
rich = "^13.7.1"
pillow = "^10.3.0"
opencv-python = "^4.9.0.80"
sentence-transformers = "^2.7.0"
pypdf2 = "^3.0.1"
numpy = "^1.26.4"
gradio = "^5.4.0"
google-cloud-aiplatform = "^1.71.1"
google-cloud-firestore = "^2.16.0"
google-generativeai = "^0.8.3"
langchain = "^0.3.7"
langchain-core = "^0.3.15"
langchain-google-vertexai = "^2.0.7"
langchain-google-genai = "^2.0.4"
langchain-ollama = "^0.2.0"
langchain-community = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
